# streamlit-cad-webapp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: __main__.py  run.py
src/common/: image_utils.py
src/controllers/: api_send_binary_image.py  api_send_url_image.py
streamlit_cad_webapp/: __main__.py
streamlit_cad_webapp/common/: download_image_with_url.py  validate_url.py
streamlit_cad_webapp/config/: config.py
streamlit_cad_webapp/controllers/: api_send_binary_image.py  api_send_url_image.py
