[project]
name = "streamlit-cad-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "environs>=14.3.0",
    "numpy>=1.26.4",
    "pillow>=10.4.0",
    "pydantic-settings>=2.10.1",
    "streamlit==1.33.0",
]

[tool.uv]
package = true